tests/invalid/coerce_syntax.err_exp
coerce_syntax.m:024: In clause for predicate `module_qualify_coerce'/0:
coerce_syntax.m:024:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`coerce_syntax.coerce'/1.[39;49m
coerce_syntax.m:029: In clause for predicate `apply_coerce'/0:
coerce_syntax.m:029:   in argument 1 of functor `apply/2':
coerce_syntax.m:029:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`coerce'/0.[39;49m
coerce_syntax.m:029:   (The builtin [38;5;87mcoerce[39;49m operator expects [38;5;40mone[39;49m argument, not
coerce_syntax.m:029:   [38;5;203mzero.)[39;49m
coerce_syntax.m:034: In clause for predicate `empty_apply_coerce'/0:
coerce_syntax.m:034:   in argument 1 of functor `/2':
coerce_syntax.m:034:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`coerce'/0.[39;49m
coerce_syntax.m:034:   (The builtin [38;5;87mcoerce[39;49m operator expects [38;5;40mone[39;49m argument, not
coerce_syntax.m:034:   [38;5;203mzero.)[39;49m
